added home buttons

--- a/flask_app/templates/create_ninja.html
+++ b/flask_app/templates/create_ninja.html
@@ -20,5 +20,6 @@
         Age: <input type="text" name="age">
         <input type="submit" value="Create New Dojo">
     </form>
+    <a href="/home">Home</a>
 </body>
 </html>
